--- a/src/Massway/ProjectMassway.fxml
+++ b/src/Massway/ProjectMassway.fxml
@@ -1,24 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.SeparatorMenuItem?>
-<?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.control.cell.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
-
-<VBox prefHeight="900.0" prefWidth="1600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
+<VBox prefHeight="900.0" prefWidth="1600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Massway.ProjectMassway">
   <children>
     <MenuBar VBox.vgrow="NEVER">
       <menus>
@@ -61,6 +48,11 @@
     </MenuBar>
       <TabPane prefHeight="883.0" prefWidth="1600.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
+ <!--           <Tab text="Inventory">
+                <content>
+                    <fx:include fx:id="inventoryTab" source="inventory.fxml" />
+                </content>
+            </Tab>-->
           <Tab text="Inventory">
                <content>
                 <SplitPane dividerPositions="0.2505567928730512" focusTraversable="true" prefHeight="900.0" prefWidth="1600.0">
@@ -91,13 +83,15 @@
                               <TextField layoutX="49.0" layoutY="461.0" prefHeight="25.0" prefWidth="250.0" />
                               <Label layoutX="48.0" layoutY="496.0" text="Total Cost" />
                               <TextField layoutX="49.0" layoutY="515.0" prefHeight="25.0" prefWidth="250.0" />
-                              <Label layoutX="48.0" layoutY="557.0" text="Product Photo" />
-                              <Button layoutX="46.0" layoutY="585.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="100.0" text="Upload Photo" />
-                              <Label layoutX="49.0" layoutY="620.0" text="Notes" />
-                              <TextArea layoutX="45.0" layoutY="637.0" prefHeight="75.0" prefWidth="250.0" />
-                              <Label layoutX="45.0" layoutY="720.0" text="Sale Price" />
-                              <TextField layoutX="46.0" layoutY="739.0" prefHeight="25.0" prefWidth="250.0" />
-                              <Button layoutX="241.0" layoutY="786.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="58.0" text="Add" />
+                              <Label layoutX="48.0" layoutY="549.0" text="Product Photo" />
+                              <Button layoutX="46.0" layoutY="577.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="100.0" text="Upload Photo" />
+                              <Label layoutX="49.0" layoutY="612.0" text="Notes" />
+                              <TextArea layoutX="45.0" layoutY="629.0" prefHeight="75.0" prefWidth="250.0" />
+                              <Label layoutX="45.0" layoutY="712.0" text="Sale Price" />
+                              <TextField layoutX="46.0" layoutY="731.0" prefHeight="25.0" prefWidth="250.0" />
+                              <Label layoutX="45.0" layoutY="765.0" text="Zeta Number" />
+                              <TextField layoutX="46.0" layoutY="784.0" prefHeight="25.0" prefWidth="250.0" />
+                              <Button layoutX="238.0" layoutY="816.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="58.0" text="Add" />
                       </children>
                     </AnchorPane>
                     <ScrollPane prefHeight="846.0" prefWidth="1080.0">
@@ -128,16 +122,16 @@
                                  </textFill>
                               </Label>
                               <Label layoutX="49.0" layoutY="67.0" text="Client Number" />
-                              <TextField id="addClientNumber" layoutX="49.0" layoutY="84.0" prefWidth="250.0" />
+                              <TextField fx:id="clientNumber" layoutX="49.0" layoutY="84.0" prefWidth="250.0" />
                               <Label layoutX="49.0" layoutY="118.0" text="Client Name" />
-                              <TextField id="addClientName" layoutX="49.0" layoutY="136.0" prefWidth="250.0" />
+                              <TextField fx:id="clientName" layoutX="49.0" layoutY="136.0" prefWidth="250.0" />
                               <Label layoutX="49.0" layoutY="170.0" text="Country" />
-                              <TextField id="addClientCountry" layoutX="49.0" layoutY="188.0" prefWidth="250.0" />
+                              <TextField fx:id="clientCountry" layoutX="49.0" layoutY="188.0" prefWidth="250.0" />
                               <Label layoutX="49.0" layoutY="222.0" text="Address" />
-                              <TextField id="clientAddAddress" layoutX="49.0" layoutY="240.0" prefWidth="250.0" />
+                              <TextField fx:id="clientAddress" layoutX="49.0" layoutY="240.0" prefWidth="250.0" />
                               <Label layoutX="49.0" layoutY="274.0" text="Telephone Number" />
-                              <TextField id="clientAddTelephoneNumber" layoutX="49.0" layoutY="291.0" prefWidth="250.0" />
-                              <Button id="addClientButton" layoutX="241.0" layoutY="324.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="58.0" text="Add" />
+                              <TextField fx:id="clientTelephoneNumber" layoutX="49.0" layoutY="291.0" prefWidth="250.0" />
+                              <Button fx:id="addClientButton" layoutX="241.0" layoutY="324.0" mnemonicParsing="false" onAction="#handleAddClientButtonAction" prefHeight="25.0" prefWidth="58.0" text="Add" />
                            </children>
                         </AnchorPane>
                         <ScrollPane prefHeight="-1.0" prefWidth="-1.0">
@@ -145,6 +139,40 @@
                               <AnchorPane id="Content" minHeight="-1.0" minWidth="-1.0" prefHeight="843.0" prefWidth="1194.0">
                                  <children>
                                     <Label alignment="CENTER" font="$x11" layoutX="14.0" layoutY="14.0" style="&#10;" text="Clients" textAlignment="CENTER" textFill="$x21" wrapText="false" />
+                                    <TableView fx:id="clientsTable" layoutX="14.0" layoutY="41.0" prefHeight="786.0" prefWidth="1165.0">
+                                      <columns>
+                                        <!--<TableColumn fx:id="clientsTableNumber" editable="false" prefWidth="107.0" text="Number" />
+                                        <TableColumn fx:id="clientsTableName" editable="false" prefWidth="124.0" text="Name" />
+                                        <TableColumn fx:id="clientsTableCountry" prefWidth="99.0" text="Country" />
+                                        <TableColumn fx:id="clientsTableAddress" prefWidth="224.0" text="Address" />
+                                        <TableColumn fx:id="clientsTableTelephoneNumber" minWidth="0.0" prefWidth="150.0" text="Telephone Number" />-->
+                                          <TableColumn prefWidth="107.0" text="Number">
+                                              <cellValueFactory>
+                                                  <PropertyValueFactory property="number" />
+                                              </cellValueFactory>
+                                          </TableColumn>
+                                          <TableColumn prefWidth="124.0" text="Name">
+                                              <cellValueFactory>
+                                                  <PropertyValueFactory property="name" />
+                                              </cellValueFactory>
+                                          </TableColumn>
+                                          <TableColumn prefWidth="99.0" text="Country">
+                                              <cellValueFactory>
+                                                  <PropertyValueFactory property="country" />
+                                              </cellValueFactory>
+                                          </TableColumn>
+                                          <TableColumn prefWidth="224.0" text="Address">
+                                              <cellValueFactory>
+                                                  <PropertyValueFactory property="address" />
+                                              </cellValueFactory>
+                                          </TableColumn>
+                                          <TableColumn prefWidth="150.0" text="Telephone Number">
+                                              <cellValueFactory>
+                                                  <PropertyValueFactory property="telephoneNumber" />
+                                              </cellValueFactory>
+                                          </TableColumn>
+                                      </columns>
+                                    </TableView>
                                  </children>
                               </AnchorPane>
                            </content>
