--- a/src/Massway/client.fxml
+++ b/src/Massway/client.fxml
@@ -1,14 +1,85 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="Massway.ClientController"
-            prefHeight="400.0" prefWidth="600.0">
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.paint.Color?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.cell.PropertyValueFactory?>
 
-</AnchorPane>
+<SplitPane dividerPositions="0.2505567928730512" focusTraversable="true" prefHeight="-1.0" prefWidth="-1.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Massway.ClientController">
+    <items>
+        <AnchorPane>
+            <children>
+                <Label alignment="CENTER" layoutX="41.0" layoutY="28.0" minWidth="60.0" prefWidth="-1.0" style="&#10;" text="Add" textAlignment="CENTER" wrapText="false">
+                    <font>
+                        <Font size="18.0" fx:id="x11" />
+                    </font>
+                    <textFill>
+                        <Color blue="0.624" green="0.624" red="0.624" fx:id="x21" />
+                    </textFill>
+                </Label>
+                <Label layoutX="49.0" layoutY="67.0" text="Client Number" />
+                <TextField fx:id="clientNumber" layoutX="49.0" layoutY="84.0" prefWidth="250.0" />
+                <Label layoutX="49.0" layoutY="118.0" text="Client Name" />
+                <TextField fx:id="clientName" layoutX="49.0" layoutY="136.0" prefWidth="250.0" />
+                <Label layoutX="49.0" layoutY="170.0" text="Country" />
+                <TextField fx:id="clientCountry" layoutX="49.0" layoutY="188.0" prefWidth="250.0" />
+                <Label layoutX="49.0" layoutY="222.0" text="Address" />
+                <TextField fx:id="clientAddress" layoutX="49.0" layoutY="240.0" prefWidth="250.0" />
+                <Label layoutX="49.0" layoutY="274.0" text="Telephone Number" />
+                <TextField fx:id="clientTelephoneNumber" layoutX="49.0" layoutY="291.0" prefWidth="250.0" />
+                <Button fx:id="addClientButton" layoutX="241.0" layoutY="324.0" mnemonicParsing="false" onAction="#handleAddClientButtonAction" prefHeight="25.0" prefWidth="58.0" text="Add" />
+            </children>
+        </AnchorPane>
+        <ScrollPane prefHeight="-1.0" prefWidth="-1.0">
+            <content>
+                <AnchorPane id="Content" minHeight="-1.0" minWidth="-1.0" prefHeight="843.0" prefWidth="1194.0">
+                    <children>
+                        <Label alignment="CENTER" font="$x11" layoutX="14.0" layoutY="14.0" style="&#10;" text="Clients" textAlignment="CENTER" textFill="$x21" wrapText="false" />
+                        <TableView fx:id="clientsTable" layoutX="14.0" layoutY="41.0" prefHeight="786.0" prefWidth="1165.0">
+                            <columns>
+                                <!--<TableColumn fx:id="clientsTableNumber" editable="false" prefWidth="107.0" text="Number" />
+                                <TableColumn fx:id="clientsTableName" editable="false" prefWidth="124.0" text="Name" />
+                                <TableColumn fx:id="clientsTableCountry" prefWidth="99.0" text="Country" />
+                                <TableColumn fx:id="clientsTableAddress" prefWidth="224.0" text="Address" />
+                                <TableColumn fx:id="clientsTableTelephoneNumber" minWidth="0.0" prefWidth="150.0" text="Telephone Number" />-->
+                                <TableColumn prefWidth="107.0" text="Number">
+                                    <cellValueFactory>
+                                        <PropertyValueFactory property="number" />
+                                    </cellValueFactory>
+                                </TableColumn>
+                                <TableColumn prefWidth="124.0" text="Name">
+                                    <cellValueFactory>
+                                        <PropertyValueFactory property="name" />
+                                    </cellValueFactory>
+                                </TableColumn>
+                                <TableColumn prefWidth="99.0" text="Country">
+                                    <cellValueFactory>
+                                        <PropertyValueFactory property="country" />
+                                    </cellValueFactory>
+                                </TableColumn>
+                                <TableColumn prefWidth="224.0" text="Address">
+                                    <cellValueFactory>
+                                        <PropertyValueFactory property="address" />
+                                    </cellValueFactory>
+                                </TableColumn>
+                                <TableColumn prefWidth="150.0" text="Telephone Number">
+                                    <cellValueFactory>
+                                        <PropertyValueFactory property="telephoneNumber" />
+                                    </cellValueFactory>
+                                </TableColumn>
+                            </columns>
+                        </TableView>
+                    </children>
+                </AnchorPane>
+            </content>
+        </ScrollPane>
+    </items>
+</SplitPane>
