--- a/src/Massway/inventory.fxml
+++ b/src/Massway/inventory.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Tab?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.Label?>
@@ -12,57 +11,53 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollPane?>
 
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.control.TabPane?>
-<TabPane xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="Massway.ClientController">
-        <SplitPane dividerPositions="0.2505567928730512" focusTraversable="true" prefHeight="900.0" prefWidth="1600.0">
-            <items>
-                <AnchorPane prefHeight="846.0" prefWidth="300.0">
+<SplitPane dividerPositions="0.2505567928730512" focusTraversable="true" prefHeight="900.0" prefWidth="1600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Massway.InventoryController">
+    <items>
+        <AnchorPane prefHeight="846.0" prefWidth="300.0">
+            <children>
+                <Label alignment="CENTER" layoutX="35.0" layoutY="14.0" minWidth="60.0" prefWidth="-1.0" style="&#10;" text="Add" textAlignment="CENTER" wrapText="false">
+                    <font>
+                        <Font size="18.0" fx:id="x1" />
+                    </font>
+                    <textFill>
+                        <Color blue="0.624" green="0.624" red="0.624" fx:id="x2" />
+                    </textFill>
+                </Label>
+                <Label layoutX="44.0" layoutY="58.0" text="Item Number" />
+                <TextField layoutX="49.0" layoutY="79.0" prefHeight="25.0" prefWidth="250.0" />
+                <Label layoutX="45.0" layoutY="110.0" text="Origin" />
+                <TextField layoutX="49.0" layoutY="129.0" prefHeight="25.0" prefWidth="250.0" />
+                <Label layoutX="44.0" layoutY="156.0" text="Entry Date" />
+                <TextField layoutX="49.0" layoutY="173.0" prefHeight="25.0" prefWidth="250.0" />
+                <Label layoutX="44.0" layoutY="208.0" text="Quantity Imported" />
+                <TextField layoutX="49.0" layoutY="226.0" prefHeight="25.0" prefWidth="250.0" />
+                <Label layoutX="49.0" layoutY="262.0" text="Unit" />
+                <ChoiceBox layoutX="50.0" layoutY="287.0" prefWidth="150.0" />
+                <Label layoutX="48.0" layoutY="332.0" text="Description" />
+                <TextArea layoutX="49.0" layoutY="350.0" prefHeight="75.0" prefWidth="250.0" />
+                <Label layoutX="48.0" layoutY="440.0" text="Unit Cost" />
+                <TextField layoutX="49.0" layoutY="461.0" prefHeight="25.0" prefWidth="250.0" />
+                <Label layoutX="48.0" layoutY="496.0" text="Total Cost" />
+                <TextField layoutX="49.0" layoutY="515.0" prefHeight="25.0" prefWidth="250.0" />
+                <Label layoutX="48.0" layoutY="549.0" text="Product Photo" />
+                <Button layoutX="46.0" layoutY="577.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="100.0" text="Upload Photo" />
+                <Label layoutX="49.0" layoutY="612.0" text="Notes" />
+                <TextArea layoutX="45.0" layoutY="629.0" prefHeight="75.0" prefWidth="250.0" />
+                <Label layoutX="45.0" layoutY="712.0" text="Sale Price" />
+                <TextField layoutX="46.0" layoutY="731.0" prefHeight="25.0" prefWidth="250.0" />
+                <Label layoutX="45.0" layoutY="765.0" text="Zeta Number" />
+                <TextField layoutX="46.0" layoutY="784.0" prefHeight="25.0" prefWidth="250.0" />
+                <Button layoutX="238.0" layoutY="816.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="58.0" text="Add" />
+            </children>
+        </AnchorPane>
+        <ScrollPane prefHeight="846.0" prefWidth="1080.0">
+            <content>
+                <AnchorPane id="Content" minHeight="-1.0" minWidth="-1.0" prefHeight="844.0" prefWidth="1194.0">
                     <children>
-                        <Label alignment="CENTER" layoutX="35.0" layoutY="14.0" minWidth="60.0" prefWidth="-1.0" style="&#10;" text="Add" textAlignment="CENTER" wrapText="false">
-                            <font>
-                                <Font size="18.0" fx:id="x1" />
-                            </font>
-                            <textFill>
-                                <Color blue="0.624" green="0.624" red="0.624" fx:id="x2" />
-                            </textFill>
-                        </Label>
-                        <Label layoutX="44.0" layoutY="58.0" text="Item Number" />
-                        <TextField layoutX="49.0" layoutY="79.0" prefHeight="25.0" prefWidth="250.0" />
-                        <Label layoutX="45.0" layoutY="110.0" text="Origin" />
-                        <TextField layoutX="49.0" layoutY="129.0" prefHeight="25.0" prefWidth="250.0" />
-                        <Label layoutX="44.0" layoutY="156.0" text="Entry Date" />
-                        <TextField layoutX="49.0" layoutY="173.0" prefHeight="25.0" prefWidth="250.0" />
-                        <Label layoutX="44.0" layoutY="208.0" text="Quantity Imported" />
-                        <TextField layoutX="49.0" layoutY="226.0" prefHeight="25.0" prefWidth="250.0" />
-                        <Label layoutX="49.0" layoutY="262.0" text="Unit" />
-                        <ChoiceBox layoutX="50.0" layoutY="287.0" prefWidth="150.0" />
-                        <Label layoutX="48.0" layoutY="332.0" text="Description" />
-                        <TextArea layoutX="49.0" layoutY="350.0" prefHeight="75.0" prefWidth="250.0" />
-                        <Label layoutX="48.0" layoutY="440.0" text="Unit Cost" />
-                        <TextField layoutX="49.0" layoutY="461.0" prefHeight="25.0" prefWidth="250.0" />
-                        <Label layoutX="48.0" layoutY="496.0" text="Total Cost" />
-                        <TextField layoutX="49.0" layoutY="515.0" prefHeight="25.0" prefWidth="250.0" />
-                        <Label layoutX="48.0" layoutY="549.0" text="Product Photo" />
-                        <Button layoutX="46.0" layoutY="577.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="100.0" text="Upload Photo" />
-                        <Label layoutX="49.0" layoutY="612.0" text="Notes" />
-                        <TextArea layoutX="45.0" layoutY="629.0" prefHeight="75.0" prefWidth="250.0" />
-                        <Label layoutX="45.0" layoutY="712.0" text="Sale Price" />
-                        <TextField layoutX="46.0" layoutY="731.0" prefHeight="25.0" prefWidth="250.0" />
-                        <Label layoutX="45.0" layoutY="765.0" text="Zeta Number" />
-                        <TextField layoutX="46.0" layoutY="784.0" prefHeight="25.0" prefWidth="250.0" />
-                        <Button layoutX="238.0" layoutY="816.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="58.0" text="Add" />
+                        <Label alignment="CENTER" font="$x1" layoutX="14.0" layoutY="14.0" style="&#10;" text="Inventory" textAlignment="CENTER" textFill="$x2" wrapText="false" />
                     </children>
                 </AnchorPane>
-                <ScrollPane prefHeight="846.0" prefWidth="1080.0">
-                    <content>
-                        <AnchorPane id="Content" minHeight="-1.0" minWidth="-1.0" prefHeight="844.0" prefWidth="1194.0">
-                            <children>
-                                <Label alignment="CENTER" font="$x1" layoutX="14.0" layoutY="14.0" style="&#10;" text="Inventory" textAlignment="CENTER" textFill="$x2" wrapText="false" />
-                            </children>
-                        </AnchorPane>
-                    </content>
-                </ScrollPane>
-            </items>
-        </SplitPane>
-</TabPane>
+            </content>
+        </ScrollPane>
+    </items>
+</SplitPane>
